--- a/storia.html
+++ b/storia.html
@@ -1,9 +1,30 @@
+<!DOCTYPE HTML PUBLIC="//W3C//DTD HTML 4.01//IT">
+<html>
+<head>
+	<TITLE> Centro Remiero Lago di Pusiano </TITLE>
+</head>
+<body>
+	<link href="index.css" rel="stylesheet">
+	<div id="cr2">
+		<img id="cr" src="https://static.wixstatic.com/media/76bff0_af8e3096e5334f7a99f820ea88b3d613~mv2.png/v1/fill/w_151,h_53,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/CRLP%20logo%20esteso%20color.png">
+		
+		<div id="opzioni">
+		<ul id="menu">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="winter.html">WinterChallange</a></li>
+			<li><a href="infermeria.html">Infermeria</a></li>
+			<li><a href="storia.html"> Storia </a></li>
 
-<main>
-	<h1 style="text-align:center;">La storia del Centro Remiero</h1>
-
-	
-	<p>Il Centro Remiero del Lago di Pusiano è stato fondato nel 1977, ma la tradizione del remo sul lago risale a tempi antichi.
+		</ul>
+		</div>
+	   </div>
+        <br>
+	<h2>La storia del centro remiero</h2>
+    <table>
+		<tr>
+			<td>
+				<p id="o2">
+					Il Centro Remiero del Lago di Pusiano è stato fondato nel 1977, ma la tradizione del remo sul lago risale a tempi antichi.
 
 
 		Il lago di Pusiano, situato in provincia di Como, ha una superficie di circa 3,9 km² ed è circondato da dolci colline ricoperte di boschi. Grazie alla sua posizione geografica, il lago ha da sempre attirato gli appassionati di attività all'aria aperta, tra cui il remo.
@@ -20,28 +41,67 @@
 		Grazie alla collaborazione con le autorità locali e le associazioni ambientaliste, il centro ha promosso progetti per proteggere la flora e la fauna del lago.
 		
 
-		Oggi, il Centro Remiero del Lago di Pusiano continua a essere un punto di riferimento per gli appassionati di remo e per chi desidera godere della bellezza del lago e della natura circostante.</p>
-		Puoi inserire uno sfondo in una pagina HTML utilizzando il CSS. Ci sono diversi modi per farlo, ma uno dei più semplici è utilizzare la proprietà "background-image".
+		Oggi, il Centro Remiero del Lago di Pusiano continua a essere un punto di riferimento per gli appassionati di remo e per chi desidera godere della bellezza del lago e della natura circostante.
+				</p>
+				
+				
+			</td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<table>
+		<tr>
+			<td>
+				<a href="https://www.google.com/maps/place/Centro+Remiero+Lago+di+Pusiano/@45.8057398,9.251863,16.27z/data=!4m6!3m5!1s0x4786a0f091d70cfb:0x93388767b6be0d4a!8m2!3d45.8061548!4d9.2561779!16s%2Fg%2F11b7y7z1zj?entry=ttu" target="_blanck">
+				<img class="img3" src="https://cdn.icon-icons.com/icons2/2108/PNG/512/google_maps_icon_130921.png"></a>
+			</td>
+			<td>
+				<a href="https://www.instagram.com/explore/locations/930647569/centro-remiero-lago-di-pusiano/" target="_blanck">
+				<img src="https://cdn.discordapp.com/attachments/788591343772762142/841297217486192682/insta_bello_1.png"></a>
+			</td>
+			<td>
+				<a href="https://www.facebook.com/crlp2019/?locale=it_IT" target="_blanck">
+				<img class="img1" src="https://i.pinimg.com/originals/b7/63/69/b763699fd1fa3bfb374442593ae642e1.png"></a>
+			</td>
+			<td>
+			<a href="Mailto:info@centroremierolagodipusiano.it?subject=Visita">
+			<img class="img4" src="https://cdn.discordapp.com/attachments/788591343772762142/843113412459233310/gmail_icon-icons.com_59877.png">
+			</a>
+			</td>
+			<td>
+				<a href="https://www.canottaggio.org/" target="_blank">
+				<img src="https://cdn.discordapp.com/attachments/1051958571220336740/1112701590600687667/image.png">
+			</td>
+		</tr>
+	</table>
+	<table>
+		<tr>
+			<td>
+				<a href="https://worldrowing.com/" target="_blank">
+				<img class="img5" src="https://cdn.discordapp.com/attachments/1051958571220336740/1112698785559228456/image.png">
+			</a>
+			</td>
+			<td>
+				<a href="https://www.autoritabacinolario.it/" target="_blank">
+				<img class="img3" src="https://cdn.discordapp.com/attachments/1051958571220336740/1112700486320148560/image.png">
+			</a>
+			</td>
+			<td>
+				<a href="http://www.canottaggiolombardia.it/" target="_blank">
+				<img class="img6" src="https://cdn.discordapp.com/attachments/1051958571220336740/1112702530019922021/image.png">
+			</a>
+			</td>
+			
+		</tr>
+	</table>
+</body>
+</html>
 
-		Ecco un esempio di codice HTML e CSS per inserire uno sfondo in una pagina web:
-		
-		```html
-		<!DOCTYPE html>
-		<html>
-		<head>
-		  <meta charset="UTF-8">
-		  <title></title>
-		  <style>
-			body {repeat;
-			}
-		  </style>
-		</head>
-		<body>
-		
-		</body>
-		</html>
-		```
-		
+   
+   
+
+
 
 		
 		
