--- a/winter.html
+++ b/winter.html
@@ -1,19 +1,88 @@
+<!DOCTYPE HTML PUBLIC="//W3C//DTD HTML 4.01//IT">
 <html>
 <head>
-<h1>WINTER ROWING CHALLENGE</h1>
-
+	<TITLE> Centro Remiero Lago di Pusiano </TITLE>
 </head>
-L’Italia del canottaggio riparte a tutti i livelli. Dal Gruppo Olimpico a quello Paralimpico – in raduno rispettivamente a Sabaudia da oggi e a Piediluco già da sabato scorso, 7
+<body>
+	<link href="index.css" rel="stylesheet">
+	<div id="cr2">
+		<img id="cr" src="https://static.wixstatic.com/media/76bff0_af8e3096e5334f7a99f820ea88b3d613~mv2.png/v1/fill/w_151,h_53,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/CRLP%20logo%20esteso%20color.png">
+		
+		<div id="opzioni">
+		<ul id="menu">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="winter.html">WinterChallange</a></li>
+			<li><a href="infermeria.html">Infermeria</a></li>
+			<li><a href="storia.html"> Storia </a></li>
+
+		</ul>
+		</div>
+	   </div>
+        <br>
+	<h2>Winter rowing challenge</h2>
+    <table>
+		<tr>
+			<td>
+				<p id="o2">
+					L’Italia del canottaggio riparte a tutti i livelli. Dal Gruppo Olimpico a quello Paralimpico – in raduno rispettivamente a Sabaudia da oggi e a Piediluco già da sabato scorso, 7
  gennaio – passando per le società, impegnate nella preparazione del primo evento del 2023, la Rowing Winter Challenge, appuntamento di gran fondo in programma a Eupilio, sul lago di Pusiano, il 21 e 22 gennaio. L’evento, organizzato sotto l’egida del CR Lago di Pusiano in collaborazione con il Comitato Lombardia della FIC, vedrà in gara tutte le categorie da Allievi a Master (per quest’ultima, la RWC è valevole quale prima tappa del Campionato Italiano di Gran Fondo), e si disputerà su due giorni.
-
-
-
-
-
-
-
-<img src="percorsos.jpg" height="500"
-
-<img src="rowing.jpg">
-
+				</p>
+				
+				
+			</td>
+		</tr>
+	</table>
+	<br>
+	<br>
+	<table>
+		<tr>
+			<td>
+				<a href="https://www.google.com/maps/place/Centro+Remiero+Lago+di+Pusiano/@45.8057398,9.251863,16.27z/data=!4m6!3m5!1s0x4786a0f091d70cfb:0x93388767b6be0d4a!8m2!3d45.8061548!4d9.2561779!16s%2Fg%2F11b7y7z1zj?entry=ttu" target="_blanck">
+				<img class="img3" src="https://cdn.icon-icons.com/icons2/2108/PNG/512/google_maps_icon_130921.png"></a>
+			</td>
+			<td>
+				<a href="https://www.instagram.com/explore/locations/930647569/centro-remiero-lago-di-pusiano/" target="_blanck">
+				<img src="https://cdn.discordapp.com/attachments/788591343772762142/841297217486192682/insta_bello_1.png"></a>
+			</td>
+			<td>
+				<a href="https://www.facebook.com/crlp2019/?locale=it_IT" target="_blanck">
+				<img class="img1" src="https://i.pinimg.com/originals/b7/63/69/b763699fd1fa3bfb374442593ae642e1.png"></a>
+			</td>
+			<td>
+			<a href="Mailto:info@centroremierolagodipusiano.it?subject=Visita">
+			<img class="img4" src="https://cdn.discordapp.com/attachments/788591343772762142/843113412459233310/gmail_icon-icons.com_59877.png">
+			</a>
+			</td>
+			<td>
+				<a href="https://www.canottaggio.org/" target="_blank">
+				<img src="https://cdn.discordapp.com/attachments/1051958571220336740/1112701590600687667/image.png">
+			</td>
+		</tr>
+	</table>
+	<table>
+		<tr>
+			<td>
+				<a href="https://worldrowing.com/" target="_blank">
+				<img class="img5" src="https://cdn.discordapp.com/attachments/1051958571220336740/1112698785559228456/image.png">
+			</a>
+			</td>
+			<td>
+				<a href="https://www.autoritabacinolario.it/" target="_blank">
+				<img class="img3" src="https://cdn.discordapp.com/attachments/1051958571220336740/1112700486320148560/image.png">
+			</a>
+			</td>
+			<td>
+				<a href="http://www.canottaggiolombardia.it/" target="_blank">
+				<img class="img6" src="https://cdn.discordapp.com/attachments/1051958571220336740/1112702530019922021/image.png">
+			</a>
+			</td>
+			
+		</tr>
+	</table>
+</body>
 </html>
+
+   
+   
+
+
