aggiunto contributi pubblici

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML PUBLIC="//W3C//DTD HTML 4.01//IT">
 <html>
 <head>
+	<link href="index.css" rel="stylesheet">
 	<TITLE> Centro Remiero Lago di Pusiano </TITLE>
 </head>
 <body>
-	<link href="index.css" rel="stylesheet">
+	
+	<a href="contributipubblici.html" id="contributi">CONTRIBUTI PUBBLICI</a>
+	
 	<div id="cr2">
 		<img id="cr" src="https://static.wixstatic.com/media/76bff0_af8e3096e5334f7a99f820ea88b3d613~mv2.png/v1/fill/w_151,h_53,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/CRLP%20logo%20esteso%20color.png">
 		
@@ -20,6 +23,7 @@
 	   </div>
         <br>
 	<h1 id="titolo">Centro Remiero Lago Di Pusiano</h1>
+	<h2> Row to grow...</h2>
     <table>
 		<tr>
 			<td>
@@ -98,6 +102,7 @@
 		</tr>
 	</table>
 </body>
+
 </html>
 <!-- 
 <a href="https://www.google.com/maps/place/Centro+Remiero+Lago+di+Pusiano/@45.8057398,9.251863,16.27z/data=!4m6!3m5!1s0x4786a0f091d70cfb:0x93388767b6be0d4a!8m2!3d45.8061548!4d9.2561779!16s%2Fg%2F11b7y7z1zj?entry=ttu" target="_blanck">
